feat: add controller APIs, DTOs, ignore path, and update api-spec field (#9)
Merge content

* feat: add ProductController APIs and DTOs
- Add GET /products: get product List
- Add GET /products/{productId}: get product detail
- Add ProductInfo DTO for product response

* chore: add ignore path "logs/*"

* feat: improve mapping path and Verification API
- Change @RequestMapping("/Users/") to @RequestMapping("/Users")
- Add GET users/verify/{token}: verify registeration email

* docs: Update ProductInfo filed name
-  Rename "category" to "categoryId" in ProductInfo

* chore: Update DTO field type
- Change gender field type from byte to Byte in UpdateUserRequest
